syntax = "proto3";
package mathing;

import "user_row.proto";

message UserGetRequest {
  repeated string names = 1;
}

message UserGetResponse {
  repeated UserRow users = 1;
}
